{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 63,
  "lineage": "eb2de8cc-8077-dee3-6361-a0b3d0a53486",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server-gabi-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:292029882946:instance/i-08ba891a30028c4b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ba891a30028c4b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gabi-server-key-pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1438daac6bccb8c",
            "private_dns": "ip-10-0-0-179.ec2.internal",
            "private_ip": "10.0.0.179",
            "public_ip": "18.207.163.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a490413cba7ee8ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094f66a987644eae9",
            "tags": {
              "Name": "dev-ec2-terraform01",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-ec2-terraform01",
              "createdby": "gabi magilner-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755a248cded987a1"
            ]
          },
          "dependencies": [
            "aws_key_pair.gabi-server-key",
            "aws_security_group.myapp_sg",
            "aws_subnet.dev-subnet-1",
            "data.aws_ami.latest_amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292029882946:internet-gateway/igw-0cd78a3d1031debac",
            "id": "igw-0cd78a3d1031debac",
            "owner_id": "292029882946",
            "tags": {
              "Name": "dev-igw",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-igw",
              "createdby": "gabi magilner-terraform"
            },
            "vpc_id": "vpc-099a637e6169e3f63"
          },
          "dependencies": [
            "aws_vpc.gabi_myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292029882946:route-table/rtb-08eed1d4549b20b8d",
            "id": "rtb-08eed1d4549b20b8d",
            "owner_id": "292029882946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd78a3d1031debac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-routetable-igw",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-routetable-igw",
              "createdby": "gabi magilner-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-099a637e6169e3f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.gabi_myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myapp_route_table-todev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ad5ef1ec49b39db",
            "route_table_id": "rtb-08eed1d4549b20b8d",
            "subnet_id": "subnet-094f66a987644eae9"
          },
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_route_table.myapp_route_table",
            "aws_subnet.dev-subnet-1",
            "aws_vpc.gabi_myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292029882946:security-group/sg-0755a248cded987a1",
            "description": "open ssh to my ip and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0755a248cded987a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "46.116.151.204/32"
                ],
                "description": "open ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-sg",
            "name_prefix": "",
            "owner_id": "292029882946",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-sg",
              "createdby": "gabi magilner-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-099a637e6169e3f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gabi_myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292029882946:subnet/subnet-094f66a987644eae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f66a987644eae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292029882946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-subnet-1",
              "createdby": "gabi magilner-terraform"
            },
            "vpc_id": "vpc-099a637e6169e3f63"
          },
          "dependencies": [
            "aws_vpc.gabi_myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gabi_myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292029882946:vpc/vpc-099a637e6169e3f63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032dcb8cf4380984e",
            "default_route_table_id": "rtb-08dd9b770fea4530d",
            "default_security_group_id": "sg-0f52f5d4c5a1b72ac",
            "dhcp_options_id": "dopt-02662993a6995dd89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-099a637e6169e3f63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08dd9b770fea4530d",
            "owner_id": "292029882946",
            "tags": {
              "Name": "dev-vpc",
              "createdby": "gabi magilner-terraform"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "createdby": "gabi magilner-terraform"
            }
          }
        }
      ]
    }
  ]
}